--- a/ML_Practice with books.ipynb
+++ b/ML_Practice with books.ipynb
@@ -1257,6 +1257,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Github\n"
+     ]
+    }
+   ],
+   "source": [
+    "#New practice\n",
+    "hey_you = 'Hello Github'\n",
+    "print(hey_you)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
