--- a/ML_Practice with books.ipynb
+++ b/ML_Practice with books.ipynb
@@ -18,13 +18,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Page 77"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1272,6 +1265,188 @@
     "#New practice\n",
     "hey_you = 'Hello Github'\n",
     "print(hey_you)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 2.6561231104\n",
+      "Error: 0.9628701776715985\n",
+      "Error: 0.5509165866836797\n",
+      "Error: 0.36445836852222424\n",
+      "Error: 0.2516768662079895\n",
+      "Error: 0.17797575048089034\n",
+      "Error: 0.12864460733422164\n",
+      "Error: 0.09511036950476208\n",
+      "Error: 0.07194564247043436\n",
+      "Error: 0.05564914990717743\n",
+      "Error: 0.04394763937673939\n",
+      "Error: 0.035357967050948465\n",
+      "Error: 0.02890700056547436\n",
+      "Error: 0.023951660591138853\n",
+      "Error: 0.020063105176016144\n",
+      "Error: 0.016952094519447087\n",
+      "Error: 0.014420818295271236\n",
+      "Error: 0.012331739998443648\n",
+      "Error: 0.010587393171639842\n",
+      "Error: 0.009117233405426495\n",
+      "Error: 0.00786904226904208\n",
+      "Error: 0.006803273214640502\n",
+      "Error: 0.005889303541837786\n",
+      "Error: 0.0051029252561172675\n",
+      "Error: 0.004424644608684828\n",
+      "Error: 0.0038385124412518303\n",
+      "Error: 0.0033313054558089675\n",
+      "Error: 0.0028919416227737734\n",
+      "Error: 0.002511053608117256\n",
+      "Error: 0.0021806703520253884\n",
+      "Error: 0.0018939739123713475\n",
+      "Error: 0.0016451096996342332\n",
+      "Error: 0.0014290353984827077\n",
+      "Error: 0.0012413985592149145\n",
+      "Error: 0.0010784359268087556\n",
+      "Error: 0.0009368896209360312\n",
+      "Error: 0.0008139366504753339\n",
+      "Error: 0.0007071291752624441\n",
+      "Error: 0.0006143435674831474\n",
+      "Error: 0.00053373677328488\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 138\n",
+    "import numpy as np\n",
+    "\n",
+    "weights = np.array([0.5, 0.48, -0.7])\n",
+    "alpha = 0.1\n",
+    "\n",
+    "streetlights = np.array( [[1, 0, 1],\n",
+    "                          [0, 1, 1],\n",
+    "                          [0, 0, 1],\n",
+    "                          [1, 1, 1],\n",
+    "                          [0, 1, 1], \n",
+    "                          [1, 0, 1]] )\n",
+    "\n",
+    "walk_vs_stop = np.array([0, 1, 0, 1, 1, 0])\n",
+    "\n",
+    "inp = streetlights[0]\n",
+    "goal_pred = walk_vs_stop[0]\n",
+    "\n",
+    "for i in range(40):\n",
+    "    error_for_all_lights = 0\n",
+    "    \n",
+    "    for row_index in range(len(walk_vs_stop)):\n",
+    "        inp = streetlights[row_index]\n",
+    "        goal_pred = walk_vs_stop[row_index]\n",
+    "        \n",
+    "        pred = inp.dot(weights)\n",
+    "        \n",
+    "        error = (goal_pred - pred) ** 2\n",
+    "        error_for_all_lights += error\n",
+    "        \n",
+    "        delta = pred - goal_pred\n",
+    "        weights -= alpha * (inp * delta)\n",
+    "        # print('Prediction: {}'.format(pred))\n",
+    "        \n",
+    "    print('Error: {}'.format(error_for_all_lights))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:0.31298811341557736\n",
+      "Error:0.043272385299784624\n",
+      "Error:0.0034372657015086937\n",
+      "Error:0.00019649599346773566\n",
+      "Error:1.015593230102771e-05\n",
+      "Error:5.122102420300414e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 157\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "\n",
+    "def relu(x):\n",
+    "    return (x > 0) * x\n",
+    "\n",
+    "def relu2deriv(output):\n",
+    "    return output > 0\n",
+    "\n",
+    "alpha = 0.2\n",
+    "hidden_size = 4\n",
+    "\n",
+    "streetlights = np.array( [[1, 0, 1],\n",
+    "                          [0, 1, 1],\n",
+    "                          [0, 0, 1],\n",
+    "                          [1, 1, 1],\n",
+    "                          [0, 1, 1], \n",
+    "                          [1, 0, 1]] )\n",
+    "\n",
+    "walk_vs_stop = np.array([0, 1, 0, 1, 1, 0])\n",
+    "\n",
+    "weights_0_1 = 2 * np.random.random((3, hidden_size)) - 1\n",
+    "weights_1_2 = 2 * np.random.random((hidden_size, 1)) - 1\n",
+    "\n",
+    "for iteration in range(60):\n",
+    "    layer_2_error = 0\n",
+    "    for i in range(len(streetlights)):\n",
+    "        layer_0 = streetlights[i:i+1]\n",
+    "        layer_1 = relu(np.dot(layer_0, weights_0_1))\n",
+    "        layer_2 = np.dot(layer_1, weights_1_2)\n",
+    "        \n",
+    "        layer_2_error += np.sum((layer_2 - walk_vs_stop[i:i+1]) ** 2)\n",
+    "        \n",
+    "        layer_2_delta = walk_vs_stop[i:i+1] - layer_2\n",
+    "        layer_1_delta = layer_2_delta.dot(weights_1_2.T) * relu2deriv(layer_1)\n",
+    "        \n",
+    "        weights_1_2 += alpha * layer_1.T.dot(layer_2_delta)\n",
+    "        weights_0_1 += alpha * layer_0.T.dot(layer_1_delta)\n",
+    "        \n",
+    "    if (iteration % 10 == 9): # Эта строка вычисляет разность в слое\n",
+    "        print (\"Error:\" + str(layer_2_error))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False  True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import numpy as np\n",
+    "# Test\n",
+    "lights = np.array( [[1, 0, 1],\n",
+    "                    [0, 1, 1],\n",
+    "                    [0, 0, 1],\n",
+    "                    [1, 1, 1],\n",
+    "                    [0, 1, 1], \n",
+    "                    [1, 0, 1]] )\n",
+    "\n",
+    "print(lights[4:5] > 0)"
    ]
   },
   {
