--- a/ML_Practice with books.ipynb
+++ b/ML_Practice with books.ipynb
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
     }
    ],
    "source": [
-    "# Page 157\n",
+    "# Page 157 (162)\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -1404,6 +1404,8 @@
     "weights_0_1 = 2 * np.random.random((3, hidden_size)) - 1\n",
     "weights_1_2 = 2 * np.random.random((hidden_size, 1)) - 1\n",
     "\n",
+    "# print(weights_0_1)\n",
+    "\n",
     "for iteration in range(60):\n",
     "    layer_2_error = 0\n",
     "    for i in range(len(streetlights)):\n",
@@ -1413,11 +1415,11 @@
     "        \n",
     "        layer_2_error += np.sum((layer_2 - walk_vs_stop[i:i+1]) ** 2)\n",
     "        \n",
-    "        layer_2_delta = walk_vs_stop[i:i+1] - layer_2\n",
+    "        layer_2_delta = layer_2 - walk_vs_stop[i:i+1]\n",
     "        layer_1_delta = layer_2_delta.dot(weights_1_2.T) * relu2deriv(layer_1)\n",
     "        \n",
-    "        weights_1_2 += alpha * layer_1.T.dot(layer_2_delta)\n",
-    "        weights_0_1 += alpha * layer_0.T.dot(layer_1_delta)\n",
+    "        weights_1_2 -= alpha * layer_1.T.dot(layer_2_delta)\n",
+    "        weights_0_1 -= alpha * layer_0.T.dot(layer_1_delta)\n",
     "        \n",
     "    if (iteration % 10 == 9): # Эта строка вычисляет разность в слое\n",
     "        print (\"Error:\" + str(layer_2_error))"
@@ -1447,6 +1449,32 @@
     "                    [1, 0, 1]] )\n",
     "\n",
     "print(lights[4:5] > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-45c9be8092b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmnist\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmnist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 180\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from keras.datasets import mnist\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
