Recurrent Neural Networks - Beginning

--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,14 +2411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress:0.9999799991999689 [('terrible', -0.0), ('horrible', -2.7320748118515565), ('fabulous', -3.8109834034570977), ('brilliant', -3.8299941349992905), ('dreadful', -3.902025425450715), ('marvelous', -3.964923283326892), ('superb', -3.9949650399862384), ('poor', -4.033282653143378), ('pathetic', -4.132616645354152), ('horrid', -4.137913051470946)]]9831)]1)]]])]4)]]][('terrible', -0.0), ('horrible', -2.804459155183317), ('fabulous', -3.6781671357547068), ('dreadful', -3.6791153159960652), ('brilliant', -3.7325971486325153), ('marvelous', -3.9867866136041488), ('poor', -4.0132286979305665), ('horrid', -4.017358107951524), ('superb', -4.0290573175644315), ('fantastic', -4.135984149449848)]\n"
+      "Progress:0.9999799991999689 [('terrible', -0.0), ('horrible', -2.52559168953348), ('fantastic', -3.93465090925655), ('bad', -4.051182051722724), ('brilliant', -4.154160608588459), ('pathetic', -4.211284441468548), ('dreadful', -4.283776633630338), ('poor', -4.380962727928457), ('magnificent', -4.382881495844147), ('great', -4.401655404772276)]5)]58)]9)]]5)])])]]]]])])][('terrible', -0.0), ('horrible', -2.6096546786637247), ('bad', -3.767183518137911), ('fantastic', -3.875075043677378), ('brilliant', -3.991796014301944), ('pathetic', -4.10884763219456), ('dreadful', -4.243173950738017), ('stupid', -4.338180291179504), ('poor', -4.344969143714373), ('great', -4.373188116606074)]\n"
      ]
     }
    ],
@@ -2472,6 +2472,170 @@
     "            *iterations)))\n",
     "        \n",
     "print(similar('terrible'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neural networks that write like Shakespeare: recurrent layers for variable-length data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i don  t know why i like this movie so w',\n",
+       " 'this movie is so bad  i knew how it ends',\n",
+       " 'probably new zealands worst movie ever m']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Page 256\n",
+    "\n",
+    "# import numpy as np\n",
+    "\n",
+    "norms = np.sum(weights_0_1 * weights_0_1, axis=1)\n",
+    "norms.resize(norms.shape[0], 1)\n",
+    "normed_weights = weights_0_1 * norms\n",
+    "\n",
+    "def make_sent_vect(words):\n",
+    "    indices = list(map(lambda x:word2index[x], \\\n",
+    "                filter(lambda x: x in word2index, words)))\n",
+    "    return np.mean(normed_weights[indices], axis=0)\n",
+    "\n",
+    "reviews2vectors = list()\n",
+    "for review in tokens:\n",
+    "    reviews2vectors.append(make_sent_vect(review))\n",
+    "reviews2vectors = np.array(reviews2vectors)\n",
+    "\n",
+    "def most_similar_reviews(review):\n",
+    "    v = make_sent_vect(review)\n",
+    "    scores = Counter()\n",
+    "    for i, val in enumerate(reviews2vectors.dot(v)):\n",
+    "        scores[i] = val\n",
+    "    most_similar = list()\n",
+    "    for idx, score in scores.most_common(3):\n",
+    "        most_similar.append(raw_reviews[idx][0:40])\n",
+    "    return most_similar\n",
+    "\n",
+    "most_similar_reviews(['boring','awful'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[1. 2. 3.]\n",
+      "[0.1 0.2 0.3]\n",
+      "[-1.  -0.5  0. ]\n",
+      "[0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 262-263 identity matrix Practice\n",
+    "\n",
+    "# import numpy as np\n",
+    "\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([0.1, 0.2, 0.3])\n",
+    "c = np.array([-1, -0.5, 0])\n",
+    "d = np.array([0, 0, 0])\n",
+    "\n",
+    "identity = np.eye(3)\n",
+    "print(identity)\n",
+    "\n",
+    "print(a.dot(identity))\n",
+    "print(b.dot(identity))\n",
+    "print(c.dot(identity))\n",
+    "print(d.dot(identity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13 15 17]\n",
+      "[13. 15. 17.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 263\n",
+    "\n",
+    "this = np.array([2, 4, 6])\n",
+    "movie = np.array([10, 10, 10])\n",
+    "rocks = np.array([1, 1, 1])\n",
+    "\n",
+    "print(this + movie + rocks)\n",
+    "print((this.dot(identity) + movie).dot(identity) + rocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 267\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def softmax(x_):\n",
+    "    x = np.atleast_2d(x_)\n",
+    "    temp = пр.ехр(х)\n",
+    "    return temp / np.sum(temp, axis=1, keepdims=True)\n",
+    "\n",
+    "word_vects = {}\n",
+    "word_vects['yankees'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['bears'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['braves'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['red'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['sox'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['lose'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['defeat'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['beat'] = np.array([[0., 0., 0.]])\n",
+    "word_vects['tie'] = np.array([[0., 0., 0.]])\n",
+    "\n",
+    "sent2output = np.random.rand(3, len(word_vects))\n",
+    "\n",
+    "identity = np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 267 - creating layers for forward prop.\n",
+    "\n",
+    "layer_0 = word_vects['red']\n",
+    "layer_1 = layer_0.dot(identity) + word_vects['sox']\n",
+    "layer_2 = layer_1.dot(identity) + word_vects['defeat']"
    ]
   },
   {
