--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2596,9 +2596,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.11111111 0.11111111 0.11111111 0.11111111 0.11111111 0.11111111\n",
+      "  0.11111111 0.11111111 0.11111111]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Page 267\n",
     "\n",
@@ -2606,7 +2615,7 @@
     "\n",
     "def softmax(x_):\n",
     "    x = np.atleast_2d(x_)\n",
-    "    temp = пр.ехр(х)\n",
+    "    temp = np.exp(x)\n",
     "    return temp / np.sum(temp, axis=1, keepdims=True)\n",
     "\n",
     "word_vects = {}\n",
@@ -2622,20 +2631,141 @@
     "\n",
     "sent2output = np.random.rand(3, len(word_vects))\n",
     "\n",
-    "identity = np.eye(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "identity = np.eye(3)\n",
+    "\n",
     "# Page 267 - creating layers for forward prop.\n",
     "\n",
     "layer_0 = word_vects['red']\n",
     "layer_1 = layer_0.dot(identity) + word_vects['sox']\n",
-    "layer_2 = layer_1.dot(identity) + word_vects['defeat']"
+    "layer_2 = layer_1.dot(identity) + word_vects['defeat']\n",
+    "\n",
+    "pred = softmax(layer_2.dot(sent2output))\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.exp?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 268 - back prop.\n",
+    "\n",
+    "y = np.array([1,0,0,0,0,0,0,0,0])\n",
+    "\n",
+    "pred_delta = pred - y\n",
+    "layer_2_delta = pred_delta.dot(sent2output.T)\n",
+    "defeat_delta = layer_2_delta * 1\n",
+    "\n",
+    "layer_1_delta = layer_2_delta.dot(identity.T)\n",
+    "sox_delta = layer_1_delta * 1\n",
+    "\n",
+    "layer_0_delta = layer_1_delta.dot(identity.T)\n",
+    "alpha = 0.01\n",
+    "\n",
+    "word_vects['red'] -= layer_0_delta * alpha\n",
+    "word_vects['sox'] -= sox_delta * alpha\n",
+    "word_vects['defeat'] -= defeat_delta * alpha\n",
+    "\n",
+    "identity -= np.outer(layer_0, layer_1_delta) * alpha\n",
+    "identity -= np.outer(layer_1, layer_2_delta) * alpha\n",
+    "sent2output -= np.outer(layer_2, pred_delta) * alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['mary', 'moved', 'to', 'the', 'bathroom.'], ['john', 'went', 'to', 'the', 'hallway.'], ['where', 'is', 'mary?', '\\tbathroom\\t1']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 269 - Dataset Preparation\n",
+    "\n",
+    "import sys, random, math\n",
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "\n",
+    "f = open('tasksv11/en/qa1_single-supporting-fact_train.txt','r')\n",
+    "raw = f.readlines()\n",
+    "f.close()\n",
+    "tokens = list()\n",
+    "for line in raw[0:1000]:\n",
+    "    tokens.append(line.lower().replace(\"\\n\",\"\").split(\" \")[1:])\n",
+    "print(tokens[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 270-271 - Preparation\n",
+    "\n",
+    "vocab = set()\n",
+    "for sent in tokens:\n",
+    "    for word in sent:\n",
+    "        vocab.add(word)\n",
+    "        \n",
+    "def words2indices(sentence):\n",
+    "    idx = list()\n",
+    "    for word in sentence:\n",
+    "        idx.append(word2index[word])\n",
+    "    return idx\n",
+    "\n",
+    "vocab = list(vocab)\n",
+    "word2index = {}\n",
+    "for i, word in enumerate(vocab):\n",
+    "    word2index[word]=i\n",
+    "    \n",
+    "def softmax(x):\n",
+    "    e_x = np.exp(x - np.max(x))\n",
+    "    return e_x / e_x.sum(axis=0)\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "embed_size = 10\n",
+    "\n",
+    "embed = (np.random.rand(len(vocab), embed_size) - 0.5) * 0.1\n",
+    "\n",
+    "recurrent = np.eye(embed_size)\n",
+    "\n",
+    "start = np.zeros(embed_size)\n",
+    "\n",
+    "decoder = (np.random.rand(embed_size, len(vocab)) - 0.5) * 0.1\n",
+    "\n",
+    "one_hot = np.eye(len(vocab))\n",
+    "\n",
+    "def predict(sent):\n",
+    "    layers = list()\n",
+    "    layer = {}\n",
+    "    layer['hidden'] = start\n",
+    "    layers.append(layer)\n",
+    "    loss = 0\n",
+    "    preds = list()\n",
+    "    for target_i in range(len(sent)):\n",
+    "        layer = {}\n",
+    "        layer['pred'] = softmax(layers[-1]['hidden'].dot(decoder))\n",
+    "        loss += -np.log(layer['pred'][sent[target_i]])\n",
+    "        layer['hidden'] = layers[-1]['hidden'].dot(recurrent) +\\\n",
+    "                                        embed[sent[target_i]]\n",
+    "        layers.append(layer)\n",
+    "    return layers, loss\n"
    ]
   },
   {
