Forward and Back propogation through RNN

--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2742,13 +2742,9 @@
     "embed_size = 10\n",
     "\n",
     "embed = (np.random.rand(len(vocab), embed_size) - 0.5) * 0.1\n",
-    "\n",
     "recurrent = np.eye(embed_size)\n",
-    "\n",
     "start = np.zeros(embed_size)\n",
-    "\n",
     "decoder = (np.random.rand(embed_size, len(vocab)) - 0.5) * 0.1\n",
-    "\n",
     "one_hot = np.eye(len(vocab))\n",
     "\n",
     "def predict(sent):\n",
@@ -2765,15 +2761,91 @@
     "        layer['hidden'] = layers[-1]['hidden'].dot(recurrent) +\\\n",
     "                                        embed[sent[target_i]]\n",
     "        layers.append(layer)\n",
-    "    return layers, loss\n"
+    "\n",
+    "    return layers, loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perplexity:82.23016500268825\n",
+      "Perplexity:82.07006016564391\n",
+      "Perplexity:81.87303409675972\n",
+      "Perplexity:81.56239217794138\n",
+      "Perplexity:80.9955360735282\n",
+      "Perplexity:79.85498833959106\n",
+      "Perplexity:77.26929888448917\n",
+      "Perplexity:69.75689813233382\n",
+      "Perplexity:40.77681694649174\n",
+      "Perplexity:23.91861080014992\n",
+      "Perplexity:19.783707801402613\n",
+      "Perplexity:18.485391226622106\n",
+      "Perplexity:17.193757735948697\n",
+      "Perplexity:15.395801012734276\n",
+      "Perplexity:12.824689868163784\n",
+      "Perplexity:9.75639585113182\n",
+      "Perplexity:7.667802759720692\n",
+      "Perplexity:6.526055747627111\n",
+      "Perplexity:5.750989431161865\n",
+      "Perplexity:5.231317103283213\n",
+      "Perplexity:4.92664720187029\n",
+      "Perplexity:4.728488388337021\n",
+      "Perplexity:4.6031394242954935\n",
+      "Perplexity:4.5302259748415885\n",
+      "Perplexity:4.479805191231206\n",
+      "Perplexity:4.426527404276067\n",
+      "Perplexity:4.360690860013493\n",
+      "Perplexity:4.284494163731166\n",
+      "Perplexity:4.204018971019123\n",
+      "Perplexity:4.117761121882188\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 273 - Forward and Back propogations\n",
+    "\n",
+    "for iter in range(30000):\n",
+    "    alpha = 0.001\n",
+    "    sent = words2indices(tokens[iter % len(tokens)][1:])\n",
+    "    \n",
+    "    layers, loss = predict(sent)\n",
+    "    \n",
+    "    for layer_idx in reversed(range(len(layers))):\n",
+    "        layer = layers[layer_idx]\n",
+    "        target = sent[layer_idx-1]\n",
+    "        \n",
+    "        if (layer_idx > 0):\n",
+    "            layer['output_delta'] = layer['pred'] - one_hot[target]\n",
+    "            new_hidden_delta = layer['output_delta'].dot(decoder.transpose())\n",
+    "            if (layer_idx == len(layers) - 1):\n",
+    "                layer['hidden_delta'] = new_hidden_delta\n",
+    "            else:\n",
+    "                layer['hidden_delta'] = new_hidden_delta + \\\n",
+    "                    layers[layer_idx+1]['hidden_delta'].dot(recurrent.transpose())\n",
+    "        else:\n",
+    "            layer['hidden_delta'] = layers[layer_idx+1]['hidden_delta'].dot(recurrent.transpose())\n",
+    "            \n",
+    "    start -= layers[0]['hidden_delta'] * alpha / float(len(sent))\n",
+    "    for layer_idx, layer in enumerate(layers[1:]):\n",
+    "        \n",
+    "        decoder -= np.outer(layers[layer_idx]['hidden'], \\\n",
+    "                           layer['output_delta']) * alpha / float(len(sent))\n",
+    "        \n",
+    "        embed_idx = sent[layer_idx]\n",
+    "        embed[embed_idx] -= layers[layer_idx]['hidden_delta'] * alpha / float(len(sent))\n",
+    "        \n",
+    "        recurrent -= np.outer(layers[layer_idx]['hidden'], \\\n",
+    "                             layer['hidden_delta']) * alpha / float(len(sent))\n",
+    "        \n",
+    "    if (iter % 1000 == 0):\n",
+    "        print('Perplexity:' + str(np.exp(loss/len(sent))))"
+   ]
   }
  ],
  "metadata": {
