--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2846,6 +2846,87 @@
     "    if (iter % 1000 == 0):\n",
     "        print('Perplexity:' + str(np.exp(loss/len(sent))))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Automatic Optimization - Frameworks Chapter 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 280-282 - Creating Tensor Class\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "class Tensor(object):\n",
+    "    def __init__(self, data, creators=None, creation_op=None):\n",
+    "        self.data = np.array(data)\n",
+    "        self.creators = creators\n",
+    "        self.creation_op = creation_op\n",
+    "        self.grad = None\n",
+    "        \n",
+    "    def backward(self, grad):\n",
+    "        self.grad = grad\n",
+    "        \n",
+    "        if (self.creation_op == 'add'):\n",
+    "            self.creators[0].backward(grad)\n",
+    "            self.creators[1].backward(grad)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Tensor(self.data + other.data,\n",
+    "                      creators=[self,other], \n",
+    "                      creation_op='add')\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return str(self.data.__repr__())\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return str(self.data.__str__())\n",
+    "    \n",
+    "x = Tensor([1,2,3,4,5])\n",
+    "y = Tensor([2,2,2,2,2])\n",
+    "\n",
+    "z = x + y\n",
+    "z.backward(Tensor(np.array([1,1,1,1,1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1]\n",
+      "[1 1 1 1 1]\n",
+      "[array([1, 2, 3, 4, 5]), array([2, 2, 2, 2, 2])]\n",
+      "add\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.grad)\n",
+    "print(y.grad)\n",
+    "print(z.creators)\n",
+    "print(z.creation_op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Page 286 - corrections for autograd"
+   ]
   }
  ],
  "metadata": {
