Adding new operations and experimenting with our framework

--- a/ML_Practice_with_books.ipynb
+++ b/ML_Practice_with_books.ipynb
@@ -2921,11 +2921,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True  True  True]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Page 286 - corrections for autograd"
+    "# Page 286 (corrections for autograd), 289 (neg), 290-291 (other operations)\n",
+    "import numpy as np\n",
+    "\n",
+    "class Tensor(object):\n",
+    "    def __init__(self, data, \n",
+    "                 autograd=False,\n",
+    "                 creators=None, \n",
+    "                 creation_op=None, \n",
+    "                 id=None):\n",
+    "        \n",
+    "        self.data = np.array(data)\n",
+    "        self.creators = creators\n",
+    "        self.creation_op = creation_op\n",
+    "        self.grad = None\n",
+    "        self.autograd = autograd\n",
+    "        self.children = {}\n",
+    "        if (id is None):\n",
+    "            id = np.random.randint(0,100000)\n",
+    "        self.id = id\n",
+    "        \n",
+    "        if (creators is not None):\n",
+    "            for c in creators:\n",
+    "                if (self.id not in c.children):\n",
+    "                    c.children[self.id] = 1\n",
+    "                else:\n",
+    "                    c.children[self.id] += 1\n",
+    "    \n",
+    "    def all_children_grads_accounted_for(self):\n",
+    "        for id, cnt in self.children.items():\n",
+    "            if (cnt != 0):\n",
+    "                return False\n",
+    "        return True\n",
+    "        \n",
+    "    def backward(self, grad=None, grad_origin=None):\n",
+    "        if (self.autograd):\n",
+    "            if (grad_origin is not None):\n",
+    "                if (self.children[grad_origin.id] == 0):\n",
+    "                    raise Exception('cannot backprop more than once')\n",
+    "                else:\n",
+    "                    self.children[grad_origin.id] -= 1\n",
+    "        \n",
+    "            if (self.grad is None):\n",
+    "                self.grad = grad\n",
+    "            else:\n",
+    "                self.grad += grad\n",
+    "\n",
+    "            if (self.creators is not None and \n",
+    "                (self.all_children_grads_accounted_for() or grad_origin is None)):\n",
+    "                if (self.creation_op == 'add'):\n",
+    "                    self.creators[0].backward(self.grad, self)\n",
+    "                    self.creators[1].backward(self.grad, self)\n",
+    "                \n",
+    "                if (self.creation_op == 'neg'):\n",
+    "                    self.creators[0].backward(self.grad.__neg__())\n",
+    "                \n",
+    "                if (self.creation_op == 'sub'):\n",
+    "                    new = Tensor(self.grad.data)\n",
+    "                    self.creators[0].backward(new, self)\n",
+    "                    new = Tensor(self.grad.__neg__().data)\n",
+    "                    self.creators[1].backward(new, self)\n",
+    "                    \n",
+    "                if (self.creation_op == 'mul'):\n",
+    "                    new = self.grad * self.creators[1]\n",
+    "                    self.creators[0].backward(new, self)\n",
+    "                    new = self.grad * self.creators[0]\n",
+    "                    self.creators[1].backward(new, self)\n",
+    "                \n",
+    "                if (self.creation_op == 'mm'):\n",
+    "                    act = self.creators[0]\n",
+    "                    weights = self.creators[1]\n",
+    "                    new = self.grad.mm(weights.transpose())\n",
+    "                    act.backward(new)\n",
+    "                    new = self.grad.transpose().mm(act).transpose()\n",
+    "                    weights.backward(new)\n",
+    "                    \n",
+    "                if (self.creation_op == 'transpose'):\n",
+    "                    self.creators[0].backward(self.grad.transpose())\n",
+    "                    \n",
+    "                if ('sum' in self.creation_op):\n",
+    "                    dim = int(self.creation_op.split('_')[1])\n",
+    "                    ds = self.creators[0].data.shape[dim]\n",
+    "                    self.creators[0].backward(self.grad.expand(dim, ds))\n",
+    "                    \n",
+    "                if ('expand' in self.creation_op):\n",
+    "                    dim = int(self.creation_op.split('_')[1])\n",
+    "                    self.creators[0].backward(self.grad.sum(dim))\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        if (self.autograd and other.autograd):\n",
+    "            return Tensor(self.data + other.data, \n",
+    "                          autograd=True,\n",
+    "                          creators=[self,other], \n",
+    "                          creation_op='add')\n",
+    "        return Tensor(self.data + other.data)\n",
+    "    \n",
+    "    def __neg__(self):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(self.data * -1, \n",
+    "                          autograd=True,\n",
+    "                          creators=[self], \n",
+    "                          creation_op='neg')\n",
+    "        return Tensor(self.data * -1)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        if (self.autograd and other.autograd):\n",
+    "            return Tensor(self.data - other.data, \n",
+    "                          autograd=True,\n",
+    "                          creators=[self,other], \n",
+    "                          creation_op='sub')\n",
+    "        return Tensor(self.data - other.data)\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        if (self.autograd and other.autograd):\n",
+    "            return Tensor(self.data * other.data, \n",
+    "                          autograd=True,\n",
+    "                          creators=[self,other], \n",
+    "                          creation_op='mul')\n",
+    "        return Tensor(self.data * other.data)\n",
+    "    \n",
+    "    def sum(self, dim):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(self.data.sum(dim), \n",
+    "                          autograd=True,\n",
+    "                          creators=[self], \n",
+    "                          creation_op='sum_'+str(dim))\n",
+    "        return Tensor(self.data.sum(dim))\n",
+    "    \n",
+    "    def expand(self, dim, copies):\n",
+    "        \n",
+    "        trans_cmd = list(range(0, len(self.data.shape)))\n",
+    "        trans_cmd.insert(dim, len(self.data.shape))\n",
+    "        new_shape = list(self.data.shape) + [copies]\n",
+    "        new_data = self.data.repeat(copies).reshape(new_shape)\n",
+    "        new_data = new_data.transpose(trans_cmd)\n",
+    "        \n",
+    "        if (self.autograd):\n",
+    "            return Tensor(new_data, \n",
+    "                          autograd=True, \n",
+    "                          creators=[self], \n",
+    "                          creation_op='expand'+str(dim))\n",
+    "        return Tensor(new_data)\n",
+    "    \n",
+    "    def transpose(self):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(self.data.transpose(), \n",
+    "                          autograd=True, \n",
+    "                          creators=[self], \n",
+    "                          creation_op='transpose')\n",
+    "        return Tensor(self.data.transpose())\n",
+    "    \n",
+    "    def mm(self, x):\n",
+    "        if (self.autograd):\n",
+    "            return Tensor(self.data.dot(x.data), \n",
+    "                          autograd=True, \n",
+    "                          creators=[self, x], \n",
+    "                          creation_op='mm')\n",
+    "        return Tensor(self.data.dot(x.data))\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return str(self.data.__repr__())\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return str(self.data.__str__())\n",
+    "    \n",
+    "a = Tensor([1,2,3,4,5], autograd=True)\n",
+    "b = Tensor([2,2,2,2,2], autograd=True)\n",
+    "c = Tensor([5,4,3,2,1], autograd=True)\n",
+    "\n",
+    "d = a + (-b)\n",
+    "e = (-b) + c\n",
+    "f = d + e\n",
+    "\n",
+    "f.backward(Tensor(np.array([1,1,1,1,1])))\n",
+    "\n",
+    "print(b.grad.data == np.array([-2,-2,-2,-2,-2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X =  [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Summing over first dimension and then second:\n",
+      "[5 7 9] \t [ 6 15] \n",
+      "\n",
+      "Expanding over first dimension:\n",
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]] \n",
+      "\n",
+      "Expanding over last dimension:\n",
+      "[[[1 1 1 1 1 1]\n",
+      "  [2 2 2 2 2 2]\n",
+      "  [3 3 3 3 3 3]]\n",
+      "\n",
+      " [[4 4 4 4 4 4]\n",
+      "  [5 5 5 5 5 5]\n",
+      "  [6 6 6 6 6 6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Couple of experiments to understand the code better\n",
+    "\n",
+    "x = Tensor(np.array([[1,2,3],[4,5,6]]))\n",
+    "print('X = ', x)\n",
+    "print('Summing over first dimension and then second:')\n",
+    "print(x.sum(0), '\\t', x.sum(1), '\\n')\n",
+    "\n",
+    "print('Expanding over first dimension:')\n",
+    "print(x.expand(dim=0, copies=4), '\\n')\n",
+    "\n",
+    "print('Expanding over last dimension:')\n",
+    "print(x.expand(dim=2, copies=6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.58128304]\n",
+      "[0.48988149]\n",
+      "[0.41375111]\n",
+      "[0.34489412]\n",
+      "[0.28210124]\n",
+      "[0.2254484]\n",
+      "[0.17538853]\n",
+      "[0.1324231]\n",
+      "[0.09682769]\n",
+      "[0.06849361]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Page 296 - start of using autograd\n",
+    "\n",
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\n",
+    "\n",
+    "w = list()\n",
+    "w.append(Tensor(np.random.rand(2,3), autograd=True))\n",
+    "w.append(Tensor(np.random.rand(3,1), autograd=True))\n",
+    "\n",
+    "for i in range(10):\n",
+    "    pred = data.mm(w[0]).mm(w[1])\n",
+    "    loss = ((pred - target) * (pred - target)).sum(0)\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\n",
+    "    \n",
+    "    for w_ in w:\n",
+    "        w_.data -= w_.grad.data * 0.1\n",
+    "        w_.grad.data *= 0\n",
+    "        \n",
+    "    print(loss)"
    ]
   }
  ],
